[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Themes/BaseTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/HostMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.772549, 0.772549, 0.772549, 1 )
thickness = 5

[node name="HostMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 100.0
grow_horizontal = 2
theme = ExtResource( 1 )
text = "HOST GAME"

[node name="IPLbl" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -182.0
margin_top = 195.0
margin_right = 183.0
margin_bottom = 291.0
grow_horizontal = 2
theme = ExtResource( 1 )
text = "Your IP: 0.0.0.0"

[node name="VPGoalLbl" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -483.0
margin_top = -149.0
margin_right = -63.0
margin_bottom = -53.0
grow_horizontal = 0
theme = ExtResource( 1 )
text = "Victory Point Goal"
align = 2
valign = 1

[node name="VPSlider" type="HSlider" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 38.0
margin_top = -149.0
margin_right = 416.0
margin_bottom = -53.0
mouse_default_cursor_shape = 6
theme = ExtResource( 1 )
custom_styles/slider = SubResource( 1 )
min_value = 1.0
max_value = 10.0
value = 3.0
scrollable = false
tick_count = 10
ticks_on_borders = true

[node name="CurrentVP" type="Label" parent="VPSlider"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 16.0
margin_right = 84.0
margin_bottom = 96.0
theme = ExtResource( 1 )
text = "3"

[node name="NameLbl" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = -45.0
margin_right = -61.0
margin_bottom = 51.0
grow_horizontal = 0
theme = ExtResource( 1 )
text = "Your Name"
align = 2
valign = 1

[node name="NameInput" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 38.0
margin_top = -45.0
margin_right = 416.0
margin_bottom = 61.0
theme = ExtResource( 1 )
caret_blink = true

[node name="ColourLbl" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = 68.0
margin_right = -55.0
margin_bottom = 164.0
grow_horizontal = 0
theme = ExtResource( 1 )
text = "Your Colour"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 38.0
margin_top = 68.0
margin_right = 416.0
margin_bottom = 164.0
flat = true
color = Color( 1, 0, 0, 1 )

[node name="BackBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -120.0
margin_right = 7.0
margin_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 1 )
text = "Back to Menu"
flat = true

[node name="StartBtn" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -163.0
margin_top = -223.0
margin_right = 165.0
margin_bottom = -121.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 1 )
text = "Start Game"
flat = true

[node name="NoNameDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.5
margin_top = -29.0
margin_right = 150.5
margin_bottom = 29.0
window_title = "No name?!"
dialog_text = "Provide your name before starting the game."

[connection signal="value_changed" from="VPSlider" to="." method="_on_VPSlider_value_changed"]
[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="StartBtn" to="." method="_on_StartBtn_pressed"]
